--- a/app/src/main/res/layout/activity_jeu.xml
+++ b/app/src/main/res/layout/activity_jeu.xml
@@ -17,7 +17,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:alignmentMode="alignBounds">
 
         <TextView
             android:layout_width="wrap_content"
@@ -54,7 +55,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="0"
-            android:id="@+id/ScoreP1"
+            android:id="@+id/scoreP1"
             android:layout_row="0"
             android:layout_column="0"
             android:textColor="#ffffffff" />
