--- a/app/src/main/res/layout/activity_jeu.xml
+++ b/app/src/main/res/layout/activity_jeu.xml
@@ -8,10 +8,10 @@
     android:background="@drawable/background">
 
     <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layoutMode="clipBounds"
-        android:columnCount="4"
+        android:columnCount="6"
         android:rowCount="8"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
