--- a/app/src/main/res/layout/activity_jeu.xml
+++ b/app/src/main/res/layout/activity_jeu.xml
@@ -8,17 +8,23 @@
     android:background="@drawable/background">
 
     <GridLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layoutMode="clipBounds"
         android:columnCount="6"
         android:rowCount="8"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:alignmentMode="alignBounds">
+        android:layout_alignParentTop="false"
+        android:layout_alignParentRight="false"
+        android:layout_alignParentEnd="false"
+        android:alignmentMode="alignBounds"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:columnOrderPreserved="true"
+        android:rowOrderPreserved="true">
 
         <TextView
             android:layout_width="wrap_content"
