--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -4,20 +4,23 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.yanick.nicolas.eric.memory.RankingActivity">
+    tools:context="com.yanick.nicolas.eric.memory.RankingActivity"
+    android:background="@drawable/background">
 
     <TextView android:id="@+id/rankingTitleTextView"
         android:text="@string/title_activity_ranking"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="#ffffffff" />
 
     <TextView android:id="@+id/rank1player"
         android:text="1. -"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="#ffffffff" />
 
     <TextView android:id="@+id/rank2player"
         android:text="2. -"
@@ -25,7 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:gravity="center"
-        android:layout_below="@+id/rank1player"/>
+        android:layout_below="@+id/rank1player"
+        android:textColor="#ffffffff" />
 
     <TextView android:id="@+id/rank3player"
         android:text="3. -"
@@ -33,7 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:gravity="center"
-        android:layout_below="@+id/rank2player"/>
+        android:layout_below="@+id/rank2player"
+        android:textColor="#ffffffff" />
 
     <TextView android:id="@+id/rank4player"
         android:text="4. -"
@@ -41,7 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:gravity="center"
-        android:layout_below="@+id/rank3player"/>
+        android:layout_below="@+id/rank3player"
+        android:textColor="#ffffffff" />
 
     <TextView android:id="@+id/rank5player"
         android:text="5. -"
@@ -49,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:gravity="center"
-        android:layout_below="@+id/rank4player"/>
+        android:layout_below="@+id/rank4player"
+        android:textColor="#ffffffff" />
 
 </RelativeLayout>
