--- a/app/src/main/res/layout/dialog_name_request.xml
+++ b/app/src/main/res/layout/dialog_name_request.xml
@@ -10,12 +10,10 @@
 
     <Button
         android:id="@+id/dialogButtonOK"
-        android:layout_width="100px"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=" Ok "
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_below="@+id/playername"
-        />
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/playername" />
 
 </RelativeLayout>
