--- a/app/src/main/res/layout/activity_jeu.xml
+++ b/app/src/main/res/layout/activity_jeu.xml
@@ -36,6 +36,16 @@
             android:layout_column="3"
             android:textColor="#ffffffff" />
 
+        <TextView
+            android:layout_width="133dp"
+            android:layout_height="match_parent"
+            android:id="@+id/txtPlayer2"
+            android:layout_row="7"
+            android:layout_column="0"
+            android:layout_columnSpan="2"
+            android:textColor="#ffffffff"
+            android:text="CPU" />
+
         <ImageView
             android:layout_width="42dp"
             android:layout_height="42dp"
@@ -64,6 +74,15 @@
             android:id="@+id/scoreP1"
             android:layout_row="0"
             android:layout_column="0"
+            android:textColor="#ffffffff" />
+
+        <TextView
+            android:layout_width="123dp"
+            android:layout_height="30dp"
+            android:id="@+id/txtPlayer1"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_columnSpan="2"
             android:textColor="#ffffffff" />
 
         <ImageButton
